fix: add shader placeholder to prevent jump

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -85,7 +85,7 @@ button {
   background-color: var(--ifm-color-emphasis-200) !important;
 }
 
-.shader-canvas {
+.shader-canvas, .shader-placeholder {
   top: 0;
   backface-visibility: hidden;
   perspective: 1000;
@@ -298,13 +298,13 @@ table tr {
 }
 
 @media only screen and (max-width: 1024px) {
-  .shader-canvas {
+  .shader-canvas, .shader-placeholder {
     height: 412px;
   }
 }
 
 @media only screen and (max-width: 800px) {
-  .shader-canvas {
+  .shader-canvas, .shader-placeholder {
     height: 388px;
   }
 }
